Filtrando por data e utilizando o .peek()